# mochi-code

./: .gitignore  .pylintrc  .style.yapf  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.fleet/: run.json  settings.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: checks.yml  pylint.yml
.mochi/: project_details.json
mochi_code/: ask.py  greeting.py  main.py  mochi.py
mochi_code/code/: __init__.py  mochi_config.py  project_details.py  project_info.py
mochi_code/commands/: __init__.py  argument_types.py  ask.py  exceptions.py  init.py
mochi_code/prompts/: project_prompts.py
tests/: test_ask.py  test_mochi.py
tests/code/: test_mochi_config.py  test_project_info.py
tests/commands/: test_argument_types.py  test_ask.py  test_init.py
tests/prompts/: test_project_prompts.py
